[package]
name = "particle"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", branch = "main"}

[[bin]]
name = "client_particle"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_particle"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]